# Convo_IVR

./: .env  .env.example  README.md  pyproject.toml  requirements.txt  run_dev.sh
app/: config.py  main.py
app/api/: __init__.py  flows.py  sessions.py  transcripts.py  webhooks.py
app/core/: asr_client.py  flow_engine.py  llm_client.py  media_bridge.py  orchestrator.py  tts_client.py
app/db/: db.py
app/models/: db_models.py  schemas.py
app/state/: __intit__.py  session_store.py
app/storage/: flows_store.py  transcripts_store.py
app/utils/: logging.py  security.py
dashboard/: README.md  streamlit_app.py
demo/: make_wav.py  run_demo.sh  simulate_call.py  test_integration.sh
demo/flows/: simple_faq.json
